modified:   src/index.html

--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
       </script>
     </nav>
 
-    <!-- Hero Section -->
+    <!-- Section 1 -->
     <div class="max-w-5xl mx-auto lg:mt-16">
       <div class="grid grid-cols-1 lg:grid-cols-2 justify-items-stretch p-4">
         <div class="flex justify-center">
@@ -130,9 +130,7 @@
             />
           </div>
           <div class="font-regular text-2xl sm:text-3xl md:text-4xl -mt-16">
-            Elevate your business 
-            with our expertise in 
-            creative solutions
+            Elevate your business with our expertise in creative solutions
           </div>
           <p class="text-sm md:text-base mt-8">
             Unlock your creative potential with our personalized services and
@@ -172,17 +170,23 @@
       </div>
     </div>
 
-    <!-- Service Section -->
+    <!-- Section 2 -->
     <div class="max-w-5xl mx-auto mt-24 mb-16">
       <div class="flex flex-col lg:flex-row">
         <div class="flex">
           <div>
-            <img src="/assets/line2.png" class="w-10 collapse md:visible" alt="" />
+            <img
+              src="/assets/line2.png"
+              class="w-10 collapse md:visible"
+              alt=""
+            />
           </div>
           <div class="bg-[#FCFAF0] p-8 lg:p-12">
             <div class="flex items-center">
               <img src="/assets/box2.png" class="w-44" alt="" />
-              <div class="text-3xl lg:text-5xl font-medium -ml-40">What can We do?</div>
+              <div class="text-3xl lg:text-5xl font-medium -ml-40">
+                What can We do?
+              </div>
             </div>
             <div class="text-lg lg:text-xl">
               Presentation, Branding kit , UI/UX & Illustration
@@ -217,11 +221,297 @@
           </div>
         </div>
         <div class="flex justify-center lg:justify-stretch">
-            <img src="/assets/illustration2.png" class="w-96 mt-8 lg:mt-0 lg:w-[520px] lg:absolute lg:-ml-28" alt="">
+          <img
+            src="/assets/illustration2.png"
+            class="w-96 mt-8 lg:mt-0 lg:w-[520px] lg:absolute lg:-ml-28"
+            alt=""
+          />
         </div>
       </div>
       <div class="flex justify-end mt-24">
         <img src="/assets/line1.png" class="w-96" alt="" />
+      </div>
+    </div>
+
+    <!-- Section 3 -->
+    <div class="max-w-3xl mx-auto mt-24 mb-16">
+      <div class="flex justify-center">
+        <div class="p-4 lg:p-0">
+          <img
+            src="/assets/box3.png"
+            class="w-48 lg:w-56 ml-48 lg:ml-[19rem]"
+            alt=""
+          />
+          <div class="font-normal text-3xl lg:text-5xl -mt-16 lg:-mt-20">
+            Most Popular Products Category
+          </div>
+        </div>
+      </div>
+      <div class="flex justify-center">
+        <img src="/assets/line1.png" class="w-96 mt-12" alt="" />
+      </div>
+      <div class="flex justify-center">
+        <div class="mt-8 grid grid-cols-1 lg:grid-cols-3 gap-x-20 gap-y-12">
+          <div class="">
+            <div class="bg-slate-200 w-56 h-56"></div>
+            <div class="flex justify-between items-center mt-4">
+              <div>
+                <h4 class="text-xl">Presentation</h4>
+                <div class="group cursor-pointer text-base">
+                  See more
+                  <span
+                    class="block max-w-0 group-hover:max-w-full transition-all duration-300 h-0.5 bg-slate-500"
+                  ></span>
+                </div>
+              </div>
+              <div>
+                <img
+                  src="/assets/icons/arrow-right.png"
+                  class="w-12 hover:scale-110 transition duration-200 cursor-pointer"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+          <div class="w-full">
+            <div class="bg-slate-200 w-56 h-56"></div>
+            <div class="flex justify-between items-center mt-4">
+              <div>
+                <h4 class="text-xl">Brochure</h4>
+                <div class="group cursor-pointer text-base">
+                  See more
+                  <span
+                    class="block max-w-0 group-hover:max-w-full transition-all duration-300 h-0.5 bg-slate-500"
+                  ></span>
+                </div>
+              </div>
+              <div>
+                <img
+                  src="/assets/icons/arrow-right.png"
+                  class="w-12 hover:scale-110 transition duration-200 cursor-pointer"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+          <div class="w-full">
+            <div class="bg-slate-200 w-56 h-56"></div>
+            <div class="flex justify-between items-center mt-4">
+              <div>
+                <h4 class="text-xl">Social Media</h4>
+                <div class="group cursor-pointer text-base">
+                  See more
+                  <span
+                    class="block max-w-0 group-hover:max-w-full transition-all duration-300 h-0.5 bg-slate-500"
+                  ></span>
+                </div>
+              </div>
+              <div>
+                <img
+                  src="/assets/icons/arrow-right.png"
+                  class="w-12 hover:scale-110 transition duration-200 cursor-pointer"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 4 -->
+    <div class="mt-24 mb-16 flex flex-col lg:flex-row w-full">
+      <div class="flex items-center p-4 lg:p-8 lg:w-2/5">
+        <img src="/assets/illustration3.png" class="w-96" alt="" />
+      </div>
+      <div class="flex flex-col p-4 lg:p-12 bg-[#FCFAF0] lg:w-3/5">
+        <div class="flex">
+          <div class="p-4 lg:p-0">
+            <img
+              src="/assets/box4.png"
+              class="w-28 lg:w-40 ml-20 lg:ml-24"
+              alt=""
+            />
+            <div class="font-normal text-3xl lg:text-4xl -mt-12 lg:-mt-16">
+              You're here! <br />
+              Let's set things up.
+            </div>
+            <div class="text-lg mt-4 leading-snug">
+              We have solutions to help you tailor <br />
+              your content or upgrade to more advanced <br />
+              services.
+            </div>
+            <div class="text-sm mt-6 leading-tight">
+              Choose Option Customization Services <br />
+              Drop your brief / links in to service description <br />
+              Our Team will help you to follow up customization service after
+              product paid.
+            </div>
+          </div>
+        </div>
+        <div class="flex justify-end items-center mt-16">
+          <div class="flex space-x-8">
+            <div class="group cursor-pointer text-lg">
+              Let's Chat with Us
+              <span
+                class="block max-w-0 group-hover:max-w-full transition-all duration-300 h-0.5 bg-slate-500"
+              ></span>
+            </div>
+            <img
+              src="/assets/icons/arrow-right.png"
+              class="w-12 hover:scale-110 transition duration-200 cursor-pointer"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 5 -->
+    <div class="mt-24 mb-16 bg-[#141111] py-28">
+      <div class="flex flex-col justify-center items-center">
+        <div class="flex justify-center">
+          <div class="p-4 lg:p-0">
+            <img
+              src="/assets/box5.png"
+              class="w-28 lg:w-48 ml-44 lg:ml-64"
+              alt=""
+            />
+            <div
+              class="font-normal text-center text-3xl text-[#A4E03D] lg:text-5xl -mt-10 lg:-mt-16"
+            >
+              1200+ High <span class="text-black">Quality</span> Digital Assets
+            </div>
+            <div class="text-lg text-center text-white mt-8">
+              Explore our Graphic & Presentation Template Fit Your Business
+              Needs
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-col items-center mt-12">
+          <div class="text-lg text-white text-center">Explore Now</div>
+          <img
+            src="/assets/icons/long-arrow.png"
+            class="w-24 hover:scale-110 text-center transition duration-200 cursor-pointer"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
+
+    <!-- Section 6 -->
+    <div class="max-w-3xl mx-auto mt-36 mb-16">
+      <div class="flex flex-col items-center p-8 lg:p-0">
+        <div class="text-3xl">Learn , share and connect with our team</div>
+        <div class="grid grid-cols-2 lg:grid-cols-4 mt-8 gap-6 lg:gap-12">
+          <div class="w-full">
+            <div class="bg-slate-200 w-44 h-44"></div>
+            <h4 class="text-xs mt-4 font-medium">
+              Handrawn Pastel Abstract Pattern
+            </h4>
+            <div class="flex justify-between items-center mt-4">
+              <div>
+                <div class="group cursor-pointer text-xs">
+                  Read More
+                  <span
+                    class="block max-w-0 group-hover:max-w-full transition-all duration-300 h-0.5 bg-slate-500"
+                  ></span>
+                </div>
+              </div>
+              <div>
+                <img
+                  src="/assets/icons/arrow-right.png"
+                  class="w-6 lg:w-10 hover:scale-110 transition duration-200 cursor-pointer"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+          <div class="w-full">
+            <div class="bg-slate-200 w-44 h-44"></div>
+            <h4 class="text-xs mt-4 font-medium">
+              Handrawn Pastel Abstract Pattern
+            </h4>
+            <div class="flex justify-between items-center mt-4">
+              <div>
+                <div class="group cursor-pointer text-xs">
+                  Read More
+                  <span
+                    class="block max-w-0 group-hover:max-w-full transition-all duration-300 h-0.5 bg-slate-500"
+                  ></span>
+                </div>
+              </div>
+              <div>
+                <img
+                  src="/assets/icons/arrow-right.png"
+                  class="w-6 lg:w-10 hover:scale-110 transition duration-200 cursor-pointer"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+          <div class="w-full">
+            <div class="bg-slate-200 w-44 h-44"></div>
+            <h4 class="text-xs mt-4 font-medium">
+              Handrawn Pastel Abstract Pattern
+            </h4>
+            <div class="flex justify-between items-center mt-4">
+              <div>
+                <div class="group cursor-pointer text-xs">
+                  Read More
+                  <span
+                    class="block max-w-0 group-hover:max-w-full transition-all duration-300 h-0.5 bg-slate-500"
+                  ></span>
+                </div>
+              </div>
+              <div>
+                <img
+                  src="/assets/icons/arrow-right.png"
+                  class="w-6 lg:w-10 hover:scale-110 transition duration-200 cursor-pointer"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+          <div class="w-full">
+            <div class="bg-slate-200 w-44 h-44"></div>
+            <h4 class="text-xs mt-4 font-medium">
+              Handrawn Pastel Abstract Pattern
+            </h4>
+            <div class="flex justify-between items-center mt-4">
+              <div>
+                <div class="group cursor-pointer text-xs">
+                  Read More
+                  <span
+                    class="block max-w-0 group-hover:max-w-full transition-all duration-300 h-0.5 bg-slate-500"
+                  ></span>
+                </div>
+              </div>
+              <div>
+                <img
+                  src="/assets/icons/arrow-right.png"
+                  class="w-6 lg:w-10 hover:scale-110 transition duration-200 cursor-pointer"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="max-w-3xl mx-auto mt-24 mb-16">
+      <hr class="bg-gray-900 border-2 h-1" />
+      <div
+        class="mt-2 lg:mt-8 flex flex-col lg:flex-row justify-between lg:items-center p-8 lg:p-0"
+      >
+        <div class="text-xs lg:w-2/5">
+          If you have any issues or suggestions related to our templates, feel
+          free to contact us via this form or email: hello@tmint.co. We’ll be
+          glad to help you
+        </div>
+        <div>
+          <img src="/assets/icons/tmint.png" class="w-48 mt-8 lg:mt-0" alt="" />
+        </div>
       </div>
     </div>
   </body>
