--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </nav>
 
     <!-- Section 1 -->
-    <div class="max-w-5xl mx-auto lg:mt-16">
+    <div class="max-w-6xl mx-auto lg:mt-16">
       <div class="grid grid-cols-1 lg:grid-cols-2 justify-items-stretch p-4">
         <div class="flex justify-center">
           <img src="/assets/illustration1.png" class="w-96" alt="" />
@@ -171,7 +171,7 @@
     </div>
 
     <!-- Section 2 -->
-    <div class="max-w-5xl mx-auto mt-24 mb-16">
+    <div class="max-w-6xl mx-auto mt-24 mb-16">
       <div class="flex flex-col lg:flex-row">
         <div class="flex">
           <div>
@@ -234,7 +234,7 @@
     </div>
 
     <!-- Section 3 -->
-    <div class="max-w-3xl mx-auto mt-24 mb-16">
+    <div class="max-w-6xl mx-auto mt-24 mb-16">
       <div class="flex justify-center">
         <div class="p-4 lg:p-0">
           <img
@@ -400,12 +400,12 @@
     </div>
 
     <!-- Section 6 -->
-    <div class="max-w-3xl mx-auto mt-36 mb-16">
+    <div class="max-w-6xl mx-auto mt-36 mb-16">
       <div class="flex flex-col items-center p-8 lg:p-0">
         <div class="text-3xl">Learn , share and connect with our team</div>
         <div class="grid grid-cols-2 lg:grid-cols-4 mt-8 gap-6 lg:gap-12">
           <div class="w-full">
-            <div class="bg-slate-200 w-44 h-44"></div>
+            <div class="bg-slate-200 w-40 h-40 lg:w-44 lg:h-44"></div>
             <h4 class="text-xs mt-4 font-medium">
               Handrawn Pastel Abstract Pattern
             </h4>
@@ -428,7 +428,7 @@
             </div>
           </div>
           <div class="w-full">
-            <div class="bg-slate-200 w-44 h-44"></div>
+            <div class="bg-slate-200 w-40 h-40 lg:w-44 lg:h-44"></div>
             <h4 class="text-xs mt-4 font-medium">
               Handrawn Pastel Abstract Pattern
             </h4>
@@ -451,7 +451,7 @@
             </div>
           </div>
           <div class="w-full">
-            <div class="bg-slate-200 w-44 h-44"></div>
+            <div class="bg-slate-200 w-40 h-40 lg:w-44 lg:h-44"></div>
             <h4 class="text-xs mt-4 font-medium">
               Handrawn Pastel Abstract Pattern
             </h4>
@@ -474,7 +474,7 @@
             </div>
           </div>
           <div class="w-full">
-            <div class="bg-slate-200 w-44 h-44"></div>
+            <div class="bg-slate-200 w-40 h-40 lg:w-44 lg:h-44"></div>
             <h4 class="text-xs mt-4 font-medium">
               Handrawn Pastel Abstract Pattern
             </h4>
@@ -499,7 +499,7 @@
         </div>
       </div>
     </div>
-    <div class="max-w-3xl mx-auto mt-24 mb-16">
+    <div class="max-w-6xl mx-auto mt-24 mb-16">
       <hr class="bg-gray-900 border-2 h-1" />
       <div
         class="mt-2 lg:mt-8 flex flex-col lg:flex-row justify-between lg:items-center p-8 lg:p-0"
